// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderMessageListItem renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": undefined,
      "height": undefined,
    }
  }
/>
`;

exports[`RenderMessageListItem renders messages 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "alignSelf": "flex-end",
      "backgroundColor": "#64189b",
      "borderRadius": 10,
      "height": undefined,
      "marginBottom": 10,
      "marginHorizontal": 10,
      "maxWidth": "80%",
      "paddingHorizontal": 14,
      "paddingVertical": 10,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": undefined,
        "flex": undefined,
        "flexDirection": undefined,
        "height": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "paddingHorizontal": undefined,
        "paddingVertical": undefined,
        "position": undefined,
        "width": undefined,
      }
    }
  >
    <Text
      style={
        {
          "color": "white",
          "textShadowColor": undefined,
          "textShadowOffset": undefined,
          "textShadowRadius": undefined,
          "textTransform": undefined,
        }
      }
    >
      Hello, bob!
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": undefined,
        "height": undefined,
        "justifyContent": "flex-end",
        "minHeight": 16.5,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignContent": undefined,
          "alignItems": "center",
          "backgroundColor": undefined,
          "flex": undefined,
          "flexDirection": "row",
          "gap": undefined,
          "height": undefined,
          "justifyContent": "flex-end",
          "marginBottom": undefined,
          "marginHorizontal": undefined,
          "marginVertical": undefined,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": undefined,
            "flex": undefined,
            "flexDirection": undefined,
            "height": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "paddingHorizontal": undefined,
            "paddingVertical": undefined,
            "position": undefined,
            "width": undefined,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9B9B9B",
              "fontSize": 12,
              "textShadowColor": undefined,
              "textShadowOffset": undefined,
              "textShadowRadius": undefined,
              "textTransform": undefined,
            }
          }
        >
          09:48
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`RenderMessageListItem renders messages 2`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "alignSelf": "flex-start",
      "backgroundColor": "#3F3F3F",
      "borderRadius": 10,
      "height": undefined,
      "marginBottom": 10,
      "marginHorizontal": 10,
      "maxWidth": "80%",
      "paddingHorizontal": 14,
      "paddingVertical": 10,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": undefined,
        "flex": undefined,
        "flexDirection": undefined,
        "height": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "paddingHorizontal": undefined,
        "paddingVertical": undefined,
        "position": undefined,
        "width": undefined,
      }
    }
  >
    <Text
      style={
        {
          "color": "white",
          "textShadowColor": undefined,
          "textShadowOffset": undefined,
          "textShadowRadius": undefined,
          "textTransform": undefined,
        }
      }
    >
      Hello, alice!
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": undefined,
        "height": undefined,
        "justifyContent": "flex-end",
        "minHeight": 16.5,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignContent": undefined,
          "alignItems": "center",
          "backgroundColor": undefined,
          "flex": undefined,
          "flexDirection": "row",
          "gap": undefined,
          "height": undefined,
          "justifyContent": "flex-end",
          "marginBottom": undefined,
          "marginHorizontal": undefined,
          "marginVertical": undefined,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": undefined,
            "flex": undefined,
            "flexDirection": undefined,
            "height": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "paddingHorizontal": undefined,
            "paddingVertical": undefined,
            "position": undefined,
            "width": undefined,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9B9B9B",
              "fontSize": 12,
              "textShadowColor": undefined,
              "textShadowOffset": undefined,
              "textShadowRadius": undefined,
              "textTransform": undefined,
            }
          }
        >
          09:48
        </Text>
      </View>
    </View>
  </View>
</View>
`;
